--- a/docker/nginx/conf.d/server.api.conf
+++ b/docker/nginx/conf.d/server.api.conf
@@ -1,340 +1,17 @@
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+	server_name siasky.dev;
 
-	# server name matcher
-	server_name siasky.dev dev3.siasky.dev;
-
-	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/siasky.dev/siasky.dev.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/siasky.dev/siasky.dev.key;
 
-	# include common ssl settings
-	include /etc/nginx/conf.d/include/ssl-settings;
+	include /etc/nginx/conf.d/server/server.api;
+}
 
-	# ddos protection: closing slow connections
-	client_body_timeout 1h;
-	client_header_timeout 1h;
-	send_timeout 1h;
+server {
+	server_name dev3.siasky.dev;
 
-	proxy_connect_timeout 1h;
-	proxy_read_timeout 1h;
-	proxy_send_timeout 1h;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/dev3.siasky.dev/dev3.siasky.dev.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/dev3.siasky.dev/dev3.siasky.dev.key;
 
-	# Increase the body buffer size, to ensure the internal POSTs can always
-	# parse the full POST contents into memory.
-	client_body_buffer_size 128k;
-	client_max_body_size 128k;
-
-	# legacy endpoint rewrite
-	rewrite ^/portals /skynet/portals permanent;
-	rewrite ^/stats /skynet/stats permanent;
-	rewrite ^/skynet/blacklist /skynet/blocklist permanent;
-
-	# This is only safe workaround to reroute based on some conditions
-	# See https://www.nginx.com/resources/wiki/start/topics/depth/ifisevil/
-	recursive_error_pages on;
-
-	# redirect to dnslookup endpoint
-	error_page 462 = @dnslink_lookup;
-	if ($http_dnslink_lookup) {
-		return 462;
-	}
-
-	location / {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_pass http://website:9000;
-	}
-
-	location /docs {
-		proxy_pass https://skynetlabs.github.io/skynet-docs;
-	}
-
-	location /skynet/blocklist {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_cache skynet;
-		proxy_cache_valid any 1m; # cache blocklist for 1 minute
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://sia:9980/skynet/blocklist;
-	}
-
-	location /skynet/portals {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_cache skynet;
-		proxy_cache_valid any 1m; # cache portals for 1 minute
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://sia:9980/skynet/portals;
-	}
-
-	location /skynet/stats {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_cache skynet;
-		proxy_cache_valid any 1m; # cache stats for 1 minute
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_read_timeout 5m; # extend the read timeout
-		proxy_pass http://sia:9980/skynet/stats;
-	}
-
-	location /health-check {
-		include /etc/nginx/conf.d/include/cors;
-
-		access_log off; # do not log traffic to health-check endpoint
-
-		proxy_pass http://10.10.10.60:3100; # hardcoded ip because health-check waits for nginx
-	}
-
-	location /hns {
-		# match the request_uri and extract the hns domain and anything that is passed in the uri after it
-		# example: /hns/something/foo/bar matches:
-		# > hns_domain_name: something
-		# > path: /foo/bar/
-		set_by_lua_block $hns_domain_name { return string.match(ngx.var.uri, "/hns/([^/?]+)") }
-		set_by_lua_block $path { return string.match(ngx.var.uri, "/hns/[^/?]+(.*)") }
-
-		include /etc/nginx/conf.d/include/location-hns;
-	}
-
-	location /hnsres {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_pass http://handshake-api:3100;
-	}
-
-	# internal registry endpoint that caches calls for a certain period of time
-	# it is not suitable for every registry call but some requests might be cached
-	# and we are using it currently for caching registry resolutions from /hns calls
-	location /skynet/registry/cached {
-		include /etc/nginx/conf.d/include/location-skynet-registry;
-		
-		internal; # internal endpoint only
-
-		proxy_cache skynet;
-		proxy_cache_key $args; # cache based on publickey and datakey args
-		proxy_cache_valid 200 30s; # cache only 200 responses and only for 30 seconds
-		proxy_cache_lock on; # queue cache requests for the same resource until it is fully cached
-		proxy_cache_bypass $cookie_nocache $arg_nocache; # add cache bypass option
-	}
-
-	location /skynet/registry {
-		include /etc/nginx/conf.d/include/location-skynet-registry;
-	}
-
-	location /skynet/skyfile {
-		include /etc/nginx/conf.d/include/cors;
-		include /etc/nginx/conf.d/include/sia-auth;
-		include /etc/nginx/conf.d/include/track-upload;
-		include /etc/nginx/conf.d/include/generate-siapath;
-
-		limit_req zone=uploads_by_ip burst=100 nodelay;
-		limit_req zone=uploads_by_ip_throttled;
-
-		limit_conn upload_conn 10;
-		limit_conn upload_conn_rl 1;
-
-		client_max_body_size 1000M; # make sure to limit the size of upload to a sane value
-
-		# increase request timeouts
-		proxy_read_timeout 600;
-		proxy_send_timeout 600;
-
-		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
-		proxy_set_header Expect $http_expect;
-		proxy_set_header User-Agent: Sia-Agent;
-
-		# access_by_lua_block {
-		# 	-- this block runs only when accounts are enabled
-		# 	if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
-
-		# 	ngx.var.upload_limit_rate = 5 * 1024 * 1024
-		# 	local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
-		# 	if res.status == ngx.HTTP_OK then
-		# 		local json = require('cjson')
-		# 		local user = json.decode(res.body)
-		# 		ngx.var.upload_limit_rate = ngx.var.upload_limit_rate * (user.tier + 1)
-		# 	end
-		# }
-
-		# proxy this call to siad endpoint (make sure the ip is correct)
-		proxy_pass http://sia:9980/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
-	}
-
-	# endpoing implementing resumable file uploads open protocol https://tus.io
-	location /skynet/tus {
-		include /etc/nginx/conf.d/include/cors;
-		include /etc/nginx/conf.d/include/track-upload;
-
-		# TUS chunks size is 40M + leaving 10M of breathing room
-		client_max_body_size 50M;
-		
-		# Those timeouts need to be elevated since skyd can stall reading 
-		# data for a while when overloaded which would terminate connection
-		client_body_timeout 1h;
-		proxy_send_timeout  1h;
-
-		# Add X-Forwarded-* headers
-		proxy_set_header X-Forwarded-Host  $host;
-		proxy_set_header X-Forwarded-Proto $scheme;
-
-		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
-		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect $scheme://$host $SKYNET_SERVER_API;
-
-		# proxy /skynet/tus requests to siad endpoint with all arguments
-		proxy_pass http://sia:9980;
-
-		# set max upload size dynamically based on account limits
-		rewrite_by_lua_block {
-			-- set default limit value to 1 GB
-			ngx.req.set_header("SkynetMaxUploadSize", 1073741824)
-
-			-- this block runs only when accounts are enabled
-			-- if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
-
-			-- fetch account limits and set max upload size accordingly
-			-- local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
-			-- if res.status == ngx.HTTP_OK then
-			-- 	local json = require('cjson')
-			-- 	local limits = json.decode(res.body)
-			-- 	ngx.req.set_header("SkynetMaxUploadSize", limits.maxUploadSize)
-			-- end
-		}
-
-		# extract skylink from base64 encoded upload metadata and assign to a proper header
-		header_filter_by_lua_block {
-			ngx.header["Skynet-Portal-Api"] = os.getenv("SKYNET_PORTAL_API")
-			ngx.header["Skynet-Server-Api"] = os.getenv("SKYNET_SERVER_API")
-
-			if ngx.header["Upload-Metadata"] then
-				local encodedSkylink = string.match(ngx.header["Upload-Metadata"], "Skylink ([^,?]+)")
-
-				if encodedSkylink then
-					ngx.header["Skynet-Skylink"] = ngx.decode_base64(encodedSkylink)
-				end
-			end
-		}
-	}
-
-	location /skynet/pin {
-		include /etc/nginx/conf.d/include/cors;
-		include /etc/nginx/conf.d/include/sia-auth;
-		include /etc/nginx/conf.d/include/track-upload;
-		include /etc/nginx/conf.d/include/generate-siapath;
-
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://sia:9980$uri?siapath=$dir1/$dir2/$dir3&$args;
-	}
-
-	location /skynet/metadata {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://sia:9980;
-	}
-
-	location /skynet/resolve {
-		include /etc/nginx/conf.d/include/cors;
-
-		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://sia:9980;
-	}
-
-	location ~ "^/(([a-zA-Z0-9-_]{46}|[a-z0-9]{55})(/.*)?)$" {
-		set $skylink $2;
-		set $path $3;
-
-		include /etc/nginx/conf.d/include/location-skylink;
-	}
-
-	location ~ "^/file/(([a-zA-Z0-9-_]{46}|[a-z0-9]{55})(/.*)?)$" {
-		set $skylink $2;
-		set $path $3;
-		set $args attachment=true&$args;
-		#set $is_args ?;
-
-		include /etc/nginx/conf.d/include/location-skylink;
-	}
-
-	location @dnslink_lookup {
-		include /etc/nginx/conf.d/include/proxy-buffer;
-		include /etc/nginx/conf.d/include/proxy-pass-internal;
-
-		set $dnslink '';
-
-		rewrite_by_lua_block {
-			local http = require("socket.http")
-			local ok, statusCode, headers, statusText = http.request {
-				url = "http://dnslink-api:3100/dnslink/" .. ngx.var.host
-			}
-
-			if statusCode == ngx.HTTP_OK then
-				ngx.var.dnslink = headers["skynet-skylink"]
-			else
-				ngx.status = statusCode
-				ngx.header["content-type"] = "text/plain"
-				ngx.say(headers["dnslink-error"])
-				ngx.exit(statusCode)
-			end
-		}
-
-		proxy_set_header Dnslink-Lookup "";
-		proxy_pass http://127.0.0.1/$dnslink$request_uri;
-	}
-
-	location @purge {
-		allow 10.0.0.0/8;
-		allow 127.0.0.1/32;
-		allow 172.16.0.0/12;
-		allow 192.168.0.0/16;
-		deny all;
-
-		set $lua_purge_path "/data/nginx/cache/";
-		content_by_lua_file /etc/nginx/conf.d/scripts/purge-multi.lua;
-	}
-
-	location /__internal/do/not/use/authenticated {
-		include /etc/nginx/conf.d/include/cors;
-
-		charset utf-8;
-    	charset_types application/json;
-    	default_type application/json;
-
-		content_by_lua_block {
-			local json = require('cjson')
-			-- this block runs only when accounts are enabled
-			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then
-				ngx.say(json.encode{authenticated = false})
-				return ngx.exit(ngx.HTTP_OK)
-			end
-
-			local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
-			if res.status == ngx.HTTP_OK then
-				local limits = json.decode(res.body)
-				ngx.say(json.encode{authenticated = limits.tier > 0})
-				return ngx.exit(ngx.HTTP_OK)
-			end
-
-			ngx.say(json.encode{authenticated = false})
-			return ngx.exit(ngx.HTTP_OK)
-		}
-	}
-
-	location /accounts {
-		internal; # internal endpoint only
-		access_log off; # do not log traffic
-
-		proxy_cache skynet; # use general nginx cache
-		proxy_cache_key $uri+$skynet_jwt; # include skynet-jwt cookie (mapped to skynet_jwt)
-		proxy_cache_valid 200 401 1m; # cache success and unauthorized responses for 1 minute
-		proxy_buffer_size 8k; # increase size of the buffer to fit jwt in cache key
-
-		rewrite /accounts(.*) $1 break; # drop the /accounts prefix from uri
-		proxy_pass http://10.10.10.70:3000; # hardcoded ip because accounts might not be available
-	}
-
-	# include custom locations, specific to the server
-	include /etc/nginx/conf.d/server-override/*;
+	include /etc/nginx/conf.d/server/server.api;
 }
