--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -1,35 +1,19 @@
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
 	server_name *.hns.siasky.dev;
 
 	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.siasky.dev/wildcard_.hns.siasky.dev.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.siasky.dev/wildcard_.hns.siasky.dev.key;
-	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
-
-	location / {
-        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "[^%.]+") }
-		set $path $uri;
-
-		include /etc/nginx/conf.d/include/location-hns;
-	}
+	
+    include /etc/nginx/conf.d/server/server.hns;
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
 	server_name *.hns.dev3.siasky.dev;
 
 	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.dev3.siasky.dev/wildcard_.hns.dev3.siasky.dev.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.dev3.siasky.dev/wildcard_.hns.dev3.siasky.dev.key;
-	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
-
-	location / {
-        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "[^%.]+") }
-		set $path $uri;
-
-		include /etc/nginx/conf.d/include/location-hns;
-	}
+	
+    include /etc/nginx/conf.d/server/server.hns;
 }
