--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -1,35 +1,17 @@
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
 	server_name *.siasky.dev;
 
-	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.siasky.dev/wildcard_.siasky.dev.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.siasky.dev/wildcard_.siasky.dev.key;
-	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
-
-	location / {
-        set_by_lua_block $skylink { return string.match(ngx.var.host, "%w+") }
-		set $path $uri;
-
-		include /etc/nginx/conf.d/include/location-skylink;
-	}
+	
+	include /etc/nginx/conf.d/server/server.skylink;
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
 	server_name *.dev3.siasky.dev;
-
-	# server specific certificate string
+	
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.key;
-	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
-
-	location / {
-        set_by_lua_block $skylink { return string.match(ngx.var.host, "%w+") }
-		set $path $uri;
-
-		include /etc/nginx/conf.d/include/location-skylink;
-	}
+	
+	include /etc/nginx/conf.d/server/server.skylink;
 }
